# sf

./: .gitignore  _CoqProject  coq-coq-playground.opam  flake.nix
src/lf/: Basics.v  Induction.v
src/lf/basics/: day.v
