opam-version: "2.0"
maintainer: "fernandonsilva16@gmail.com"
version: "dev"

homepage: "https://github.com/fersilva16/sf"
dev-repo: "git+https://github.com/fersilva16/sf.git"
bug-reports: "https://github.com/fersilva16/sf/issues"
license: "MIT"

synopsis: "Software Foundations"
description: """Software Foundations"""

build: [make "-j%{jobs}%"]
install: [make "install"]
depends: [
  "coq" { >= "8.13" }
]

authors: [
  "Fernando Silva"
]
